2007-08-02  Diego Escalante Urrelo  <diegoe@gnome.org>

	* data/ui/epiphany-ui.xml:
	* src/ephy-window.c:
	* src/ephy-lockdown.c:

	Remove "Add bookmark" and "Save as" from the document context menu.
	Patch by Cosimo Cecchi. Part of bug #332968.

2007-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-completion-model.c:
	* embed/ephy-history.c:

	Fix completion model to show icons for history items too,
	istory/bookmarks/favicon_cache service objects are now stored in the
	completion priv. Patch by Imran Patel. Fixes bug #459811.

2007-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>

	* data/epiphany-lockdown.schemas.in:

	Remove misleading text from hide menu bar lockdown. Fixes bug #321989.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/ephy-embed.c:

	Add a missing space in ge_content_change description.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/ephy-file-helpers.c:

	Remove an unused variable. One-liner by Cosimo Cecchi.
	Part of Bug #433173.

2007-07-31  Xan Lopez  <xan@gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	* embed/webkit/webkit-embed-single.cpp:

	Do not use #ifdef inside macros, ancient compilers
	don't like it

2007-07-30  Christian Persch  <chpe@gnome.org>

	=== Release 2.19.6 ===

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/webkit/webkit-embed.cpp:

	can_go methods now work, WebKit was missing the implementations for
	those functions, it's fixed now so we can use can_go methods.
	Note that they are useless without the ge_location signal being
	emitted (dummy code included, commented).

	Part of Bug #461652.

2007-07-30  Xan Lopez  <xan@gnome.org>

	* embed/webkit/webkit-embed-persist.cpp:
	* embed/webkit/webkit-embed.cpp:

	Add returns where needed, remove unnecessary variables.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/webkit/webkit-embed-single.cpp:
	* embed/webkit/webkit-embed.cpp:
	* embed/webkit/webkit-embed-find.h: