@@ -1,3 +1,11 @@
+2007-08-06  Diego Escalante Urrelo  <diegoe@gnome.org>
+
+	* embed/ephy-history.c:
+	* embed/ephy-history.h:
+
+	Make ephy_history_set_enabled actually disable history and not delete
+	it. Also make it public.
+
 2007-08-02  Diego Escalante Urrelo  <diegoe@gnome.org>
 
 	* data/ui/epiphany-ui.xml:
